--- a/asgmt-04.ipynb
+++ b/asgmt-04.ipynb
@@ -57,11 +57,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "update_release_year_to_dates =\\\n",
+    "update_title_to_upper =\\\n",
     "\"\"\"\n",
     "-- BEGIN SOLUTION\n",
-    "UPDATE movies\n",
-    "   SET title = UPPER(title);\n",
+    "\n",
     "-- END SOLUTION\n",
     "\"\"\""
    ]
@@ -73,9 +72,9 @@
    "outputs": [],
    "source": [
     "class TestAssignmentFour(unittest.TestCase):\n",
-    "    def test_01_update_release_year_to_dates(self):\n",
+    "    def test_01_update_title_to_upper(self):\n",
     "        table_name = \"movies\"\n",
-    "        connection.execute(update_release_year_to_dates)\n",
+    "        connection.execute(update_title_to_upper)\n",
     "        select_all_query = \"\"\"SELECT * FROM {};\"\"\".format(table_name)\n",
     "        table_select_all = pd.read_sql(select_all_query, connection)\n",
     "        titles = table_select_all[\"title\"].values\n",
@@ -120,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
